# PythonPROG

./: Banner.py  Chart02.py  Code64.py  Contagem01.py  Fidget.py  Graph.py  LerArq.py  LerArqByte.py  Life.py  Numeros_Complexos.py  Paint.py  PieChart.py  README.md  TelnetLib3ClientSample.py  TelnetLib3ServerSample.py  TelnetSample.py  pyproject.toml  snake.py
