[tool.poetry]
name = "repl_python3_PythonPROG"
version = "0.1.0"
description = ""
authors = ["rmsbrowser <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
estimator = "^0.0.10"
networks = "^0.3.7"
opensimplex = "^0.4"
pygame = "^2.1.2"
pyqtgraph = "^0.12.3"
freegames = "^2.4.0"
opencv-python = "^4.5.5"
telnetlib3 = "^1.0.4"
common = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
